fixing overlap on mobile

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 
 /*full screen for each section*/
 .section {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
